[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[[test]]
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# map our success exit code to exit code 0
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
